change image size

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <img src="./img/portfolio1.jpg" alt="First commercial web" class="projects__img">
           <div class="projcts__text-content">
             <h4 class="projects__project-title">Strona portfolio dla fotografa</h4>
-            <p class="projects__project-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, deleniti!</p>
+            <p class="projects__project-description">Aktulanie trwa budowa strony 😉</p>
             <button class="projects__btn-show-more btn">Zobacz więcej</button>
           </div>
         </div>
@@ -179,7 +179,7 @@
           
           <div class="projcts__text-content">
             <h4 class="projects__project-title">Strona firmowa</h4>
-            <p class="projects__project-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem hic recusandae quis voluptatum cum sequi accusantium quasi voluptatem?</p>
+            <p class="projects__project-description">Aktulanie trwa budowa strony 😉</p>
             <button class="projects__btn-show-more btn">Zobacz więcej</button>
           </div>
           <img src="./img/portfolio1.jpg" alt="First commercial web" class="projects__img projects__img--right">
@@ -189,7 +189,7 @@
           <img src="./img/portfolio1.jpg" alt="First commercial web" class="projects__img">
           <div class="projcts__text-content">
             <h4 class="projects__project-title">Landing Page</h4>
-            <p class="projects__project-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum, expedita ullam incidunt qui vitae reprehenderit veniam architecto perspiciatis fugiat laboriosam.</p>
+            <p class="projects__project-description">Aktulanie trwa budowa strony 😉</p>
             <button class="projects__btn-show-more btn">Zobacz więcej</button>
           </div>
         </div>
