--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+
     <meta name="description" content="Strona portfolio - Paweł Motyka.">
 		<meta
 			name="viewport"
@@ -69,7 +69,6 @@
         <polyline points="6 9 12 15 18 9"></polyline>
      </svg></a>
 		</header>
-		<!-- <div class="wrapper"> -->
 		<section id="about" class="about-me">
 			<div class="about-me__img-box" data-aos="fade-right">
 				<img
@@ -86,10 +85,9 @@
 			<div class="about-me__text-content" data-aos="fade-left">
 				<h2 class="heading about-me__title">O MNIE.</h2>
 				<p class="about-me__description">
-					Nazwyam się Paweł Motyka i zajmuję się front-endem. Swoją przygodę
+					Nazywam się Paweł Motyka i zajmuję się front-endem. Swoją przygodę
 					rozpocząłem 24.05.2021r. W świecie IT jednak nie jestem nowy! Od
-					młodego gryzę kable, stukam w klawiaturę i bawię się grafiką. W wolnej
-					chwili chywam za gitarę lub bass i realizuję się artystycznie.
+					małego gryzę kable, stukam w klawiaturę i bawię się grafiką. W wolnej chwili chywam za gitarę lub bass i realizuję się artystycznie.
 				</p>
 			</div>
 			<div class="about-me__education" data-aos="fade-up">
@@ -273,7 +271,6 @@
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!-- <script  src="./js/index.js"></script> -->
 		<script type="module" src="/js/script.js"></script>
 	</body>
 </html>
