fix project right item

--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
 
         <div class="projects__item projects__item--right" data-aos="fade-left">
           
-          <div class="projcts__text-content">
+          <div class="projcts__text-content projcts__text-content--right ">
             <h4 class="projects__project-title">Strona firmowa</h4>
-            <p class="projects__project-description">Aktulanie trwa budowa strony 😉</p>
+            <p class="projects__project-description projects__project-description--right">Aktulanie trwa budowa strony 😉</p>
             <button class="projects__btn-show-more btn">Zobacz więcej</button>
           </div>
           <img src="./img/portfolio1.jpg" alt="First commercial web" class="projects__img projects__img--right">
