--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<p class="about-me__description">
 					Nazywam się Paweł Motyka i zajmuję się front-endem. Swoją przygodę
 					rozpocząłem 24.05.2021r. W świecie IT jednak nie jestem nowy! Od
-					małego gryzę kable, stukam w klawiaturę i bawię się grafiką. W wolnej chwili chywam za gitarę lub bass i realizuję się artystycznie.
+					małego gryzę kable, stukam w klawiaturę i bawię się grafiką. W wolnej chwili chwytam za gitarę lub bass i realizuję się artystycznie.
 				</p>
 			</div>
 			<div class="about-me__education" data-aos="fade-up">
