--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Oswald:wght@300;400;700&family=Roboto:wght@300;400;700&family=M+PLUS+Rounded+1c:wght@300;400;700&display=swap"
 			rel="stylesheet"
 		/>
+    <link rel="icon" type="image/png" href="./img/logo/logo-biale-wektor.png">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="./js/vanilla-tilt.min.js"></script>
 		<script
@@ -166,11 +167,11 @@
         
 
         <div class="projects__item" data-aos="fade-right">
-          <img src="./img/portfolio1.jpg" alt="First commercial web" class="projects__img">
+          <img src="./img/photographer.jpg" alt="First commercial web" class="projects__img">
           <div class="projcts__text-content">
             <h4 class="projects__project-title">Strona portfolio dla fotografa</h4>
-            <p class="projects__project-description">Aktulanie trwa budowa strony 😉</p>
-            <button class="projects__btn-show-more btn">Zobacz więcej</button>
+            <p class="projects__project-description">Strona dla fotografa Przygotowana razem z świetną galerią!</p>
+            <a href="https://monikamotykaphotography.netlify.app/" target="__blank"  class="projects__btn-show-more btn">Zobacz więcej</a>
           </div>
         </div>
 
@@ -179,7 +180,7 @@
           <div class="projcts__text-content projcts__text-content--right ">
             <h4 class="projects__project-title">Strona firmowa</h4>
             <p class="projects__project-description projects__project-description--right">Aktulanie trwa budowa strony 😉</p>
-            <button class="projects__btn-show-more btn">Zobacz więcej</button>
+            <a class="projects__btn-show-more btn">Zobacz więcej</a>
           </div>
           <img src="./img/portfolio1.jpg" alt="First commercial web" class="projects__img projects__img--right">
         </div>
@@ -189,7 +190,7 @@
           <div class="projcts__text-content">
             <h4 class="projects__project-title">Landing Page</h4>
             <p class="projects__project-description">Aktulanie trwa budowa strony 😉</p>
-            <button class="projects__btn-show-more btn">Zobacz więcej</button>
+            <a class="projects__btn-show-more btn">Zobacz więcej</a>
           </div>
         </div>
 
